syntax = "proto3";

package yandex.cloud.priv.vdi.v1.api;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/vdi/v1/api;vdi";
option java_outer_classname = "PADI";

message DesktopImage {
    string id = 1;
    string folder_id = 2;
    string image_id = 3;
    google.protobuf.Timestamp created_at = 4;

    enum Status {
        STATUS_UNSPECIFIED = 0;
        CREATING = 1;
        ACTIVE = 2;
        DELETING = 3;
    }
    Status status = 5;

    string name = 11;
}
